--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -973,7 +973,7 @@
 
 		p.style2 {
 			font-weight: 700;
-			color: #e97770;
+			color: #fff;
 			border-radius: 0.35em;
 			box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
 			font-size: 2.75em;
